test/pass/alias_basic_1.rill
import std.stdio;

def main()
{
    10.print();
}