test/compile_error/lifetime.rill
def main() {
}

import std.stdio;

def f() {
    val mutable y = address_of(10);
    {
        val x = 72;
        y = &x;
    };
    (*y).print();
}
